--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="link">Studio</a>
             </li>
             <li class="header-flex-element">
-              <a href="./portfolio.html" class="link">Portfolio</a>
+              <a href="./portfolio.html" class="link current">Portfolio</a>
             </li>
             <li class="header-flex-element">
               <a href="" class="link">Contacts</a>
@@ -72,15 +72,25 @@
               <button type="button" class="portfolio-btn">Marketing</button>
             </li>
           </ul>
+          <!-- Cards -->
           <ul class="portfolio-card-list list flex-container">
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_1/Row1_Card1.jpg"
-                  alt="Banking app layout"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_1/Row1_Card1.jpg"
+                    alt="Banking app layout"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Banking App Interface Concept</h2>
                   <p class="desc">App</p>
@@ -89,12 +99,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_1/Row1_Card2.jpg"
-                  alt="A person makes a payment using a mobile phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_1/Row1_Card2.jpg"
+                    alt="A person makes a payment using a mobile phone"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Cashless Payment</h2>
                   <p class="desc">Marketing</p>
@@ -103,12 +122,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_1/Row1_Card3.jpg"
-                  alt="Meditation app is opened on laptop and phone"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_1/Row1_Card3.jpg"
+                    alt="Meditation app is opened on laptop and phone"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Meditation App</h2>
                   <p class="desc">App</p>
@@ -117,12 +145,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_2/Row2_Card1.jpg"
-                  alt="Car steering wheel"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_2/Row2_Card1.jpg"
+                    alt="Car steering wheel"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Taxi Service</h2>
                   <p class="desc">Marketing</p>
@@ -131,12 +168,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_2/Row2_Card2.jpg"
-                  alt="A version of the illustration on the phone screen and a picture"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_2/Row2_Card2.jpg"
+                    alt="A version of the illustration on the phone screen and a picture"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Screen Illustrations</h2>
                   <p class="desc">Design</p>
@@ -145,12 +191,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_2/Row2_Card3.jpg"
-                  alt="A girl on the street is at an online meeting"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_2/Row2_Card3.jpg"
+                    alt="A girl on the street is at an online meeting"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Online Courses</h2>
                   <p class="desc">Marketing</p>
@@ -159,12 +214,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_3/Row3_Card1.jpg"
-                  alt="Layout of an Instagram stories concept "
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_3/Row3_Card1.jpg"
+                    alt="Layout of an Instagram stories concept "
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Instagram Stories Concept</h2>
                   <p class="desc">Design</p>
@@ -173,12 +237,21 @@
             </li>
             <li class="portfolio-card-list-item">
               <a class="link portfolio-card-link" href="">
-                <img
-                  src="./images/row_3/Row3_Card2.jpg"
-                  alt="A food with food in an eco-bag"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_3/Row3_Card2.jpg"
+                    alt="A food with food in an eco-bag"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Organic Food</h2>
                   <p class="desc">Web Site</p>
@@ -186,13 +259,22 @@
               </a>
             </li>
             <li class="portfolio-card-list-item">
-              <a class="link portfolio-card-link"  href="">
-                <img
-                  src="./images/row_3/Row3_Card3.jpg"
-                  alt="Barista makes cappuccino"
-                  width="360"
-                  height="300"
-                />
+              <a class="link portfolio-card-link" href="">
+                <div class="card-wrapper">
+                  <img
+                    src="./images/row_3/Row3_Card3.jpg"
+                    alt="Barista makes cappuccino"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-card-list-desc">
                   <h2 class="subtitle">Fresh Coffee</h2>
                   <p class="desc">Web Site</p>
@@ -207,72 +289,72 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer-container">
-          <div class="footer-section">
-            <a href="./index.html" class="link logo"
-              >Web<span class="footer-logo">Studio</span></a
-            >
-            <p class="footer-desc">
-              Increase the flow of customers and sales for your business with
-              digital marketing &#x26; growth solutions.
-            </p>
-          </div>
-          <div class="footer-socials">
-            <p class="footer-socials-title">Social media</p>
-            <ul class="footer-socials-list list">
-              <li class="footer-socials-item">
-                <a
-                  class="footer-socials-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Instagram icon"
-                >
-                  <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-item">
-                <a
-                  class="footer-socials-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Twitter icon"
-                >
-                  <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-item">
-                <a
-                  class="footer-socials-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Facebook icon"
-                >
-                  <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-item">
-                <a
-                  class="footer-socials-link link"
-                  href=""
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Linkedin icon"
-                >
-                  <svg class="footer-socials-icon" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="footer-section">
+          <a href="./index.html" class="link logo"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-desc">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#x26; growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-socials-title">Social media</p>
+          <ul class="footer-socials-list list">
+            <li class="footer-socials-item">
+              <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Instagram icon"
+              >
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Twitter icon"
+              >
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Facebook icon"
+              >
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a
+                class="footer-socials-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Linkedin icon"
+              >
+                <svg class="footer-socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
